# VRCaster

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: contract.md  design.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  encode.rs  ffmpeg.rs  history.rs  lib.rs  main.rs  media.rs  preset.rs  queue.rs  server.rs  subtitle.rs  types.rs  upload.rs
src/components/: DropZone.svelte  FileCard.svelte  HistoryView.svelte  LogPanel.svelte  NginxDeploy.svelte  ParamControls.svelte  PresetBar.svelte  ProgressBar.svelte  ProgressDetail.svelte  SamplePanel.svelte  Segmented.svelte  ServerProfileEditor.svelte
src/lib/: api.ts  i18n.ts  stores.ts  types.ts
src/views/: MainView.svelte  SettingsView.svelte
