[package]
name = "vrcaster"
version = "0.1.0"
description = "VRChat 视频压制上传工具"
edition = "2021"
rust-version = "1.77"

[lib]
name = "vrcaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
russh = "0.61"
russh-sftp = "2.3.0"
keyring = { version = "3.6.3", features = ["windows-native"] }
reqwest = { version = "0.13.3", features = ["stream"] }
zip = "4.2.0"
dirs = "6.0.0"
rand = "0.9.4"
anyhow = "1.0.102"
thiserror = "2.0.18"
# 功能模块依赖在脚手架验证通过后用 `cargo add` 精确添加：
#   tokio, russh, russh-sftp（纯 Rust SFTP，免 openssl）, keyring,
#   reqwest(rustls-tls), zip, dirs, rand, anyhow, thiserror

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
